# LitReview

./: .gitignore  pyproject.toml
data/originals/markdown/: classical_theory.md
data/originals/odt/: classical theory theory comp responses.odt  reconsidering Japan's revolution from above (revision).odt  state formation comp.odt
data/prompts/: basic_templates.yaml  questions.yaml
litreview/agents/: chain.py  simple.py
litreview/models/: pydai.py
litreview/types/: config.py  deps.py  prompts.py
